# libict-logger

./: README.md  compare.bsh  configure.sh
source/: CMakeLists.txt  disable-all.hpp  disable-crit.hpp  disable-debug.hpp  disable-err.hpp  disable-info.hpp  disable-layer.hpp  disable-notice.hpp  disable-warn.hpp  enable-all.hpp  enable-crit.hpp  enable-debug.hpp  enable-err.hpp  enable-info.hpp  enable-layer.hpp  enable-notice.hpp  enable-warn.hpp  logger.cpp  logger.hpp  logger.md
